Fixes 11658: Increase min-height of .radio and .checkbox for horizontal forms to ensure alignment of content below
BS3 commits: 48269dcd282f05be79c9bb8cba032c745b3b337a

--- a/less/forms.less
+++ b/less/forms.less
@@ -313,6 +313,12 @@ input[type="checkbox"],
   .checkbox-inline {
     padding-top: (@padding-base-vertical + 1); // Default padding plus a border
   }
+  // Account for padding we're adding to ensure the alignment and of help text
+  // and other content below items
+  .radio,
+  .checkbox {
+    min-height: @line-height-computed + (@padding-base-vertical + 1);
+  }
 
   .form-control-static {
     padding-top: (@padding-base-vertical + 1);
